リンク追加

--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
       <div class="control-wrapper">
         <div class="control-container">
           <div class="control-row">
+            <a href="./link.html" target="_blank" title="a" rel="noopener noreferrer">リンク集</a>
+          </div>
+          <div class="control-row">
             <strong>共通</strong>
           </div>
           <div class="control-row">
