--- a/link.html
+++ b/link.html
@@ -25,9 +25,9 @@
       rel="noopener noreferrer">UnChIジェネレータ</a>
     <a href="https://udonarium.app/" target="_blank" title="a" rel="noopener noreferrer">ユドナリウム</a>
     <strong>zipファイル</strong>
-    <a href="https://gomihitomi.github.io/unchi-card-generator/zip/全カード.zip" target="_blank" title="a"
+    <a href="https://gomihitomi.github.io/unchi-card-generator/zip/UnChI全カード画像.zip" target="_blank" title="a"
       rel="noopener noreferrer">UnChI全カード画像（zipファイル）</a>
-    <a href="https://gomihitomi.github.io/unchi-card-generator/zip/対戦台.zip" target="_blank" title="a"
+    <a href="https://gomihitomi.github.io/unchi-card-generator/zip/ユドナリウム用対戦台.zip" target="_blank" title="a"
       rel="noopener noreferrer">ユドナリウム用対戦台（zipファイル）</a>
     <strong>スターターデッキ</strong>
     <a href="https://gomihitomi.github.io/unchi-card-generator/zip/はじめての赤_20240102.zip" target="_blank" title="a"
