--- a/link.html
+++ b/link.html
@@ -11,7 +11,15 @@
     .link-list {
       display: flex;
       flex-direction: column;
-      gap: 0.2em;
+      gap: 0.8em;
+    }
+
+    .link-list>a {
+      max-width: 480px;
+      text-decoration: none;
+      border: 1px solid #000;
+      border-radius: 0.2em;
+      padding: 0.5em;
     }
   </style>
 </head>
