--- a/index.html
+++ b/index.html
@@ -242,10 +242,10 @@
     </div>
   </div>
 
-  <script src="https://unpkg.com/vue@next"></script>
-  <script src="https://unpkg.com/dom-to-image@2.6.0"></script>
-  <script src="https://unpkg.com/crypto-js@4.2.0/crypto-js.js"></script>
-  <script src="https://unpkg.com/jszip@3.1.5/dist/jszip.min.js"></script>
+  <script src="./script/vue.global.prod.js"></script>
+  <script src="./script/dom-to-image.min.js"></script>
+  <script src="./script/crypto-js.js"></script>
+  <script src="./script/jszip.min.js"></script>
 
   <script>
     const MAIN_COLOR_MAP = {
